# Metivta-Eval

./: .env.example  .env.supabase.example  .gitignore  .golangci.yml  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  config.toml  docker-compose.yml  go.mod  go.sum  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  clean-logs.yml  publish-ghcr.yml
api/: demo_answer.py  demo_mteb.py  evaluate.py  server.py  wsgi.py
api/database/: supabase_manager.py  supabase_schema.sql
api/docs/: index-api.html  openapi-spec.json  openapi-spec.yaml  submit_sample.json
api/fastapi_app/: __init__.py  main.py
api/handlers/: async_handler.py  generate_leaderboard.py
api/templates/: leaderboard.html  register.html
api/utils/: add_api_key.py  create_supabase_project.py  dataset_validator.py
api/workers/: celery_app.py  evaluation_state.py  evaluation_tasks.py
cmd/metivta/: main.go
cmd/metivta-gateway/: main.go  public_site.go
dataset/: Q1-questions-only.json  README.md  full_QA_set.json  maturity_rubric.json  test-user-submissions.json  test_small.json  torah_qa_dataset.json
deploy/: Dockerfile.fastapi  Dockerfile.fastapi-lite  Dockerfile.flask  Dockerfile.gateway  Dockerfile.worker  prometheus.yml  promtail.yml  render.yaml  wrangler.toml
deploy/alertmanager/: alertmanager.yml
deploy/prometheus/: alert-rules.yml
docs/: API_README.md  BUILD_YOUR_OWN_BENCHMARK.md  DEPLOYMENT.md  MTEB_IMPLEMENTATION_STATUS.md  RELEASE_CHECKLIST.md  SUPABASE_SETUP.md  api_specification.md
docs/content/: index.mdx
examples/: reference_retrieval_api.py
migrations/: init.sql
scripts/: generate-certs.sh
tests/: mock_user_api.py  real_answer_api.py  test_evaluator_config.py  test_show_questions.py
(+82 files in other folders)
